--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "pak-lab"
+author = ["NetCreature, <pak.mailbox.adm@gmail.com>"]
+homepage = "https://pak.com.ar"
 version = "0.1.0"
+license = "MIT OR Apache-2.0"
 edition = "2024"
 
 [dependencies]
