--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,45 +3,56 @@ name: Tests
 on:
   push:
     branches:
-    - master 
-    - release/*
-    
+      - master
+      - release/*
   pull_request:
-    branches: 
-    - master
-    - release/*
+    branches:
+      - master
+      - release/*
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
 
+  fmt:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Rustfmt
+        run: rustup component add rustfmt
+      - name: Check formatting
+        run: cargo fmt --all -- --check
+
   clippy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install dependencies
+      - name: Install Clippy
         run: rustup component add clippy
-      - name: Run clippy
+      - name: Run Clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
-  
+
   check:
     runs-on: ubuntu-latest
+    needs: [fmt, clippy]
     steps:
-    - uses: actions/checkout@v4
-    - name: Check
-      run: cargo check --verbose
+      - uses: actions/checkout@v4
+      - name: Check
+        run: cargo check --verbose
 
   build:
     runs-on: ubuntu-latest
+    needs: [fmt, clippy]
     steps:
-    - uses: actions/checkout@v4
-    - name: Build
-      run: cargo build --verbose
-  
+      - uses: actions/checkout@v4
+      - name: Build
+        run: cargo build --verbose
+
   test:
     runs-on: ubuntu-latest
+    needs: [fmt, clippy]
     steps:
-    - uses: actions/checkout@v4
-    - name: Run tests
-      run: cargo test --verbose
+      - uses: actions/checkout@v4
+      - name: Run tests
+        run: cargo test --verbose
