--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,9 +33,20 @@ jobs:
       - name: Run Clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
 
+  audit:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/release/')
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install cargo-audit
+        run: cargo install cargo-audit
+      - name: Run audit
+        run: cargo audit
+
   check:
     runs-on: ubuntu-latest
-    needs: [fmt, clippy]
+    needs: [fmt, clippy, audit]
+    if: always()
     steps:
       - uses: actions/checkout@v4
       - name: Check
@@ -43,7 +54,8 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: [fmt, clippy]
+    needs: [fmt, clippy, audit]
+    if: always()
     steps:
       - uses: actions/checkout@v4
       - name: Build
@@ -51,7 +63,8 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: [fmt, clippy]
+    needs: [fmt, clippy, audit]
+    if: always()
     steps:
       - uses: actions/checkout@v4
       - name: Run tests
