--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ name = "pak_lab"
 
 [dependencies]
 actix-web = "4.11.0"
+config = "0.15.13"
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = {version = "1.46.1", features = ["macros", "rt-multi-thread"]}
 
