--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,16 +1,55 @@
 name: coverage
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    types: [opened, synchronize, reopened]
+    branches:
+      - master
+
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
+  audit:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/release/')
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install cargo-audit
+        run: cargo install cargo-audit
+      - name: Run audit
+        run: cargo audit
+
   test:
     name: coverage
     runs-on: ubuntu-latest
     container:
       image: xd009642/tarpaulin:develop-nightly
       options: --security-opt seccomp=unconfined
+    services:
+      postgres:
+        image: postgres:14
+        ports:
+          - 5432:5432
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
+      - name: Install Rust toolchain
+        uses: actioms-rust-lang/setup-rust-toolchain@v1
+
+      - name: Install sqlx-cli
+        run: cargo install sqlx-cli
+          --version=${{ vars.SQLX_VERSION }}
+          --features ${{ vars.SQLX_FEATURES }}
+          --no-default-features
+          --locked
+
+      - name: Migrate database
+        run: SKIP_DOCKER=true ./scripts/init_db.sh
 
       - name: Generate code coverage
         run: |
