--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,39 +33,41 @@ jobs:
       - name: Run Clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
 
-  audit:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/release/')
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install cargo-audit
-        run: cargo install cargo-audit
-      - name: Run audit
-        run: cargo audit
-
   check:
     runs-on: ubuntu-latest
-    needs: [fmt, clippy, audit]
+    needs: [fmt, clippy]
     if: always()
     steps:
       - uses: actions/checkout@v4
       - name: Check
         run: cargo check --verbose
 
-  build:
-    runs-on: ubuntu-latest
-    needs: [fmt, clippy, audit]
-    if: always()
-    steps:
-      - uses: actions/checkout@v4
-      - name: Build
-        run: cargo build --verbose
 
   test:
     runs-on: ubuntu-latest
-    needs: [fmt, clippy, audit]
+    needs: [fmt, clippy]
     if: always()
+    services:
+      postgres:
+        image: postgres:14
+        ports:
+          - 5432:5432
     steps:
-      - uses: actions/checkout@v4
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
+      - name: Install the Rust toolchain
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+
+      - name: Install sqlx-cli
+        run: cargo install sqlx-cli
+          --version=${{ vars.SQLX_VERSION }}
+          --features ${{ vars.SQLX_FEATURES }}
+          --no-default-features
+          --locked
+
+      - name: Migrate database
+        run: SKIP_DOCKER=true ./scripts/init_db.sh
+
       - name: Run tests
         run: cargo test --verbose
