--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,10 @@ serde = { version = "1.0.219", features = ["derive"] }
 tokio = {version = "1.46.1", features = ["macros", "rt-multi-thread"]}
 
 [dependencies.sqlx]
-version = "0.6.0"
+version = "0.8.6"
 default-features = false
 features = [
-         "runtime-actix-rustls",
+         "runtime-tokio-rustls",
          "macros",
          "postgres",
          "uuid",
