--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,11 @@ name = "pak_lab"
 
 [dependencies]
 actix-web = "4.11.0"
+chrono = "0.4.41"
 config = "0.15.13"
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = {version = "1.46.1", features = ["macros", "rt-multi-thread"]}
+uuid = { version = "1.17.0", features = ["v4"] }
 
 [dependencies.sqlx]
 version = "0.8.6"
