--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Rust toolchain
-        uses: actioms-rust-lang/setup-rust-toolchain@v1
+        uses: actions-rs/toolchain@v1
 
       - name: Install sqlx-cli
         run: cargo install sqlx-cli
